tests/invalid/functions/declaration_mismatch_2.rs
/*
compilationExitCode: 3
*/

foo(a: i64, b: i64): i64;

main(): i32 {
    return 5;
}

foo(a: i64): i64 {
    return 4;
}